Созданы сиды для статей и комментариев
Добавил сиды для моделей статей и комментариев.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:create": "sequelize-cli db:create",
     "db:migrate": "sequelize-cli db:migrate",
-    "db:g:migration": "sequelize-cli migration:generate --name"
+    "db:g:migration": "sequelize-cli migration:generate --name",
+    "db:g:seed": "sequelize-cli seed:generate --name",
+    "db:seeds": "sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "Stepan Shakhov",
