--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "axios": "^1.3.6",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vuetify": "^3.2.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "vite": "^4.3.2"
   }
 }
