--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
